[tool.poetry]
name = "allocation-domain-fastapi"
version = "0.1.0"
description = ""
authors = ["Wannes Lint <contact@wanneslint.net>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
sqlmodel = "^0.0.4"
black = "^21.11b1"
psycopg2 = "^2.9.2"
redis = "^4.0.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
